--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -22,72 +22,71 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Get latest tag
-        id: get_tag
+      - name: Get latest tag for main and dev
         run: |
-          latest=$(jq -r '.version' package.json)
-          echo "latest_tag=$latest" >> $GITHUB_ENV
+          main_version=$(git show origin/main:package.json 2>/dev/null | jq -r '.version' 2>/dev/null)
+          dev_version=$(git show origin/dev:package.json 2>/dev/null | jq -r '.version' 2>/dev/null)
+          echo "main_tag=$main_version" >> $GITHUB_ENV
+          echo "dev_tag=$dev_version" >> $GITHUB_ENV
 
-      - name: Bump version
-        id: bump
+      - name: New version
         run: |
-            if [ "$GITHUB_REF" == "refs/heads/main" ]; then
-              # Check if this is a merge commit
-              if [ "$(git log -1 --pretty=%P | wc -w)" -gt 1 ]; then
-                echo "Merge commit detected on main, not bumping version."
-                new_tag="$latest_tag"
-                new_version="${latest_tag#v}"
-              else
-                dev_version=$(git show origin/dev:package.json 2>/dev/null | jq -r '.version' 2>/dev/null)
-                current_version=$latest_tag
-                if [ -n "$dev_version" ]; then
-                  if [ "$current_version" == "$dev_version" ]; then
-                    version=${latest_tag#v}
-                    IFS='.' read -r major minor patch <<< "$version"
-                    changed_files=$(git diff --name-only HEAD~1..HEAD | wc -l)
-                    if [ "$changed_files" -lt 4 ]; then
-                      patch=$((patch+1))
-                    else
-                      minor=$((minor+1))
-                      patch=0
-                    fi
-                    new_version="$major.$minor.$patch"
-                    new_tag="$new_version"
-                  else
-                    new_version="$dev_version"
-                    new_tag="$new_version"
-                  fi
-                else
-                  version=${latest_tag#v}
-                  IFS='.' read -r major minor patch <<< "$version"
-                  changed_files=$(git diff --name-only HEAD~1..HEAD | wc -l)
-                  if [ "$changed_files" -lt 4 ]; then
-                    patch=$((patch+1))
-                  else
-                    minor=$((minor+1))
-                    patch=0
-                  fi
-                  new_version="$major.$minor.$patch"
-                  new_tag="$new_version"
-                fi
-              fi
+          branch=$(git rev-parse --abbrev-ref HEAD)
+          main_tag="$main_tag"
+          dev_tag="$dev_tag"
+          new_version=""
+          if [ "$branch" = "main" ]; then
+            if [ "$main_tag" != "$dev_tag" ]; then
+              new_version="$dev_tag"
+              echo "Main and dev versions differ. Syncing main to dev version: $dev_tag"
             else
-              version=${latest_tag#v}
-              IFS='.' read -r major minor patch <<< "$version"
-              changed_files=$(git diff --name-only HEAD~1..HEAD | wc -l)
+              # main is same as dev, bump patch/minor
+              changed_files=$(git diff --name-only origin/main...HEAD | wc -l)
+              echo "Changed files: $changed_files"
+              current_version=$(jq -r '.version' package.json)
+              IFS='.' read -r major minor patch <<< "$current_version"
               if [ "$changed_files" -lt 4 ]; then
-                patch=$((patch+1))
+                patch=$((patch + 1))
+                echo "Bumping patch version."
               else
-                minor=$((minor+1))
+                minor=$((minor + 1))
                 patch=0
+                echo "Bumping minor version."
               fi
               new_version="$major.$minor.$patch"
-              new_tag="$new_version-dev"
             fi
-            echo "new_tag=$new_tag" >> $GITHUB_ENV
-            echo "new_tag=$new_tag" >> $GITHUB_OUTPUT
-            echo "new_version=$new_version" >> $GITHUB_ENV
-            echo "Bumped to $new_tag"
+          elif [ "$branch" = "dev" ]; then
+            # Always bump patch/minor on dev
+            changed_files=$(git diff --name-only origin/main...HEAD | wc -l)
+            echo "Changed files: $changed_files"
+            current_version=$(jq -r '.version' package.json)
+            IFS='.' read -r major minor patch <<< "$current_version"
+            if [ "$changed_files" -lt 4 ]; then
+              patch=$((patch + 1))
+              echo "Bumping patch version."
+            else
+              minor=$((minor + 1))
+              patch=0
+              echo "Bumping minor version."
+            fi
+            new_version="$major.$minor.$patch"
+          else
+            # For other branches, keep previous logic
+            changed_files=$(git diff --name-only origin/main...HEAD | wc -l)
+            echo "Changed files: $changed_files"
+            current_version=$(jq -r '.version' package.json)
+            IFS='.' read -r major minor patch <<< "$current_version"
+            if [ "$changed_files" -lt 4 ]; then
+              patch=$((patch + 1))
+              echo "Bumping patch version."
+            else
+              minor=$((minor + 1))
+              patch=0
+              echo "Bumping minor version."
+            fi
+            new_version="$major.$minor.$patch"
+          fi
+          echo "new_version=$new_version" >> $GITHUB_ENV
 
       - name: Update package.json
         run: |
