--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -31,6 +31,9 @@ jobs:
           echo "main_tag=$main_version" >> $GITHUB_ENV
           echo "dev_tag=$dev_version" >> $GITHUB_ENV
 
+      - name: Echo GITHUB_EVENT_NAME
+        run: echo "this: $GITHUB_EVENT_NAME"
+
       - name: New version
         run: |
           branch=$(git rev-parse --abbrev-ref HEAD)
