--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -255,17 +255,12 @@ jobs:
 
       - name: Validate UI routes & elements
         run: |
-          # Check if wget exists (fallback to install)
-          if ! command -v wget >/dev/null 2>&1; then
-            echo "⚠️ wget not found, installing...abc"
-            sudo apt-get update -y && sudo apt-get install -y wget
-          fi
           if nc -z localhost 3000; then
             echo "Port 3000 is open, proceeding with validation..."
             SPEC=$(cat .test.json)
             for PATH in $(echo "$SPEC" | jq -r 'keys[]'); do
               echo "Checking $PATH ..."
-              HTML=$(curl -s "http://localhost:3000$PATH")
+              HTML=$(wget -qO- "http://localhost:3000$PATH")
               for ELEM in $(echo "$SPEC" | jq -r --arg path "$PATH" '.[$path][]'); do
                 echo "  Checking element $ELEM ..."
                 FOUND=$(echo "$HTML" | pup "[data-testid=\"$ELEM\"]" | wc -l)
