--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -190,6 +190,9 @@ jobs:
           export-env: true
         env:
           OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
+        
+      - name: Ensure curl exists
+        run: sudo apt-get update && sudo apt-get install -y curl
 
       - name: List 1Password items in repo vault
         run: |
