--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -30,9 +30,15 @@ jobs:
           echo "main_tag=$main_version" >> $GITHUB_ENV
           echo "dev_tag=$dev_version" >> $GITHUB_ENV
 
-      - name: Echo GITHUB_EVENT_NAME
+      - name: TYPE OF EVENT
         run: |
-          echo "this: $GITHUB_EVENT_NAME"
+          commit_sha=$(git rev-parse HEAD)
+          parent_count=$(git rev-list --count --parents -n 1 $commit_sha)
+          if [ "$parent_count" -gt 1 ]; then
+              echo "This commit is a merge commit"
+          else
+              echo "This is a regular commit"
+          fi
 
       - name: New version
         run: |
@@ -41,13 +47,6 @@ jobs:
           dev_tag="$dev_tag"
           new_version=""
           if [ "$branch" = "main" ]; then
-            commit_sha=$(git rev-parse HEAD)
-            parent_count=$(git rev-list --count --parents -n 1 $commit_sha)
-            if [ "$parent_count" -gt 1 ]; then
-                echo "This commit is a merge commit"
-            else
-                echo "This is a regular commit"
-            fi
             if [ "$GITHUB_EVENT_NAME" = "merge" ]; then
               new_version="$dev_tag"
               echo "Merge event detected. Syncing main to dev version: $dev_tag"
