--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -38,74 +38,91 @@ jobs:
           new_version=""
           skip_commit=false
 
+          # Fetch latest commits
+          git fetch origin main
+          git fetch origin dev
+
           # Split versions into arrays
           IFS='.' read -r main_major main_minor main_patch <<< "$main_tag"
           IFS='.' read -r dev_major dev_minor dev_patch <<< "$dev_tag"
 
-          git fetch origin main
-
+          # Count changed files for patch/minor logic
           changed_files=$(git diff --name-only origin/main...HEAD | wc -l)
           echo "Changed files: $changed_files"
 
-          # Case 1: Main = Dev
-          if [ "$main_tag" = "$dev_tag" ]; then
-            if [ "$branch" = "main" ]; then
-              if [ "$changed_files" -lt 4 ]; then
-                patch=$((main_patch + 1))
-                minor=$main_minor
-              else
-                patch=0
-                minor=$((main_minor + 1))
-              fi
-              new_version="$main_major.$minor.$patch"
-              echo "Main = Dev and branch is main. Bumping both Main and Dev to $new_version"
-            elif [ "$branch" = "dev" ]; then
-              if [ "$changed_files" -lt 4 ]; then
-                patch=$((dev_patch + 1))
-                minor=$dev_minor
-              else
-                patch=0
-                minor=$((dev_minor + 1))
-              fi
-              new_version="$dev_major.$minor.$patch"
-              echo "Main = Dev and branch is dev. Bumping Dev version to $new_version"
-            else
-              new_version="$main_tag"
-              echo "No version change for other branches."
-            fi
-
-          # Case 2: Main > Dev
-          elif [ "$main_major" -gt "$dev_major" ] || \
-              { [ "$main_major" -eq "$dev_major" ] && [ "$main_minor" -gt "$dev_minor" ]; } || \
-              { [ "$main_major" -eq "$dev_major" ] && [ "$main_minor" -eq "$dev_minor" ] && [ "$main_patch" -gt "$dev_patch" ]; }; then
-            new_version="$main_tag"
-            echo "Main ($main_tag) is newer than Dev ($dev_tag). Updating Dev to match Main."
-
-          # Case 3: Dev > Main
-          elif [ "$dev_major" -gt "$main_major" ] || \
-              { [ "$dev_major" -eq "$main_major" ] && [ "$dev_minor" -gt "$main_minor" ]; } || \
-              { [ "$dev_major" -eq "$main_major" ] && [ "$dev_minor" -eq "$main_minor" ] && [ "$dev_patch" -gt "$main_patch" ]; }; then
-            if [ "$branch" = "main" ]; then
-              echo "Dev ($dev_tag) is newer than Main ($main_tag) and branch is main. Merging dev into main..."
-              git fetch origin dev
+          if [ "$branch" = "main" ]; then
+            # Check if main is behind dev
+            if git merge-base --is-ancestor origin/main origin/dev; then
+              echo "Main is behind Dev. Merging dev into main..."
               git merge --no-ff origin/dev -m "Merge dev into main to sync version $dev_tag"
               new_version="$dev_tag"
               skip_commit=true
-              echo "Main is now synced with Dev. Skipping package.json commit."
             else
-              new_version="$main_tag"
-              echo "Dev ($dev_tag) is newer than Main ($main_tag) but branch is not main. No merge."
+              # Main = Dev or normal bump logic
+              if [ "$main_tag" = "$dev_tag" ]; then
+                if [ "$changed_files" -lt 4 ]; then
+                  patch=$((main_patch + 1))
+                  minor=$main_minor
+                else
+                  patch=0
+                  minor=$((main_minor + 1))
+                fi
+                new_version="$main_major.$minor.$patch"
+                echo "Main = Dev. Bumping both Main and Dev to $new_version"
+              elif [ "$main_major" -gt "$dev_major" ] || \
+                  { [ "$main_major" -eq "$dev_major" ] && [ "$main_minor" -gt "$dev_minor" ]; } || \
+                  { [ "$main_major" -eq "$dev_major" ] && [ "$main_minor" -eq "$dev_minor" ] && [ "$main_patch" -gt "$dev_patch" ]; }; then
+                new_version="$main_tag"
+                echo "Main > Dev. Updating Dev to match Main"
+              fi
             fi
-
+          elif [ "$branch" = "dev" ]; then
+            # Always bump dev
+            if [ "$changed_files" -lt 4 ]; then
+              patch=$((dev_patch + 1))
+              minor=$dev_minor
+            else
+              patch=0
+              minor=$((dev_minor + 1))
+            fi
+            new_version="$dev_major.$minor.$patch"
+            echo "Bumping Dev version to $new_version"
           else
+            # Other branches: no automatic bump
             new_version="$main_tag"
-            echo "Versions differ but neither is strictly newer. No automatic update."
+            echo "Branch $branch: no automatic version bump"
           fi
 
-          # Export calculated version and skip_commit flag
           echo "new_version=$new_version" >> $GITHUB_ENV
           echo "skip_commit=$skip_commit" >> $GITHUB_ENV
           echo "Calculated new_version: $new_version"
+
+      - name: Update package.json
+        if: env.skip_commit != 'true'
+        run: |
+          find . -name "package.json" -not -path "*/node_modules/*" -not -path "*/vendor/*" -exec sh -c '
+            file="$1"
+            new_ver="${2#v}"
+            sed -i "s/\"version\": \".*\"/\"version\": \"$new_ver\"/" "$file"
+          ' _ {} "${{ env.new_version }}" \;
+
+      - name: Update package-lock.json
+        if: env.skip_commit != 'true'
+        run: |
+          find . -name "package-lock.json" -not -path "*/node_modules/*" -not -path "*/vendor/*" -exec sh -c '
+            file="$1"
+            new_ver="${2#v}"
+            sed -i "s/\"version\": \".*\"/\"version\": \"$new_ver\"/" "$file"
+          ' _ {} "${{ env.new_version }}" \;
+
+      - name: Commit changes
+        if: env.skip_commit != 'true'
+        run: |
+          git config --global user.name "$GIT_USER_NAME"
+          git config --global user.email "$GIT_USER_EMAIL"
+          git add $(find . -name "package.json" -o -name "package-lock.json" | grep -v node_modules | grep -v vendor)
+          git commit -m "v${{ env.new_version }}" || echo "No changes to commit"
+          git push origin $GITHUB_REF_NAME
 
       - name: Update package.json
         run: |
