--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -165,6 +165,7 @@ jobs:
 
       - name: Create Git Tag
         run: |
+          echo "denne $GIT_USER_NAME, $GIT_USER_EMAIL"
           git config --global user.name "$GIT_USER_NAME"
           git config --global user.email "$GIT_USER_EMAIL"
           branch=$(git rev-parse --abbrev-ref HEAD)
