--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -12,178 +12,134 @@ env:
 
 jobs:
   fix-version:
+  name: 🧩 Fix & Update Version
+  runs-on: ubuntu-latest
+  outputs:
+    new_tag: ${{ steps.set_tag.outputs.new_tag }}
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
-    name: 🧩 Fix & Update Version
-    runs-on: ubuntu-latest
-    outputs:
-      new_tag: ${{ steps.bump.outputs.new_tag }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+    - name: Get latest versions
+      id: get_versions
+      run: |
+        main_version=$(git show origin/main:package.json 2>/dev/null | jq -r '.version // "0.0.0"')
+        dev_version=$(git show origin/dev:package.json 2>/dev/null | jq -r '.version // "0.0.0"')
+        echo "main_tag=$main_version" >> $GITHUB_ENV
+        echo "dev_tag=$dev_version" >> $GITHUB_ENV
 
-      - name: Get latest tag for main and dev
-        run: |
-          main_version=$(git show origin/main:package.json 2>/dev/null | jq -r '.version' 2>/dev/null)
-          dev_version=$(git show origin/dev:package.json 2>/dev/null | jq -r '.version' 2>/dev/null)
-          echo "main_tag=$main_version" >> $GITHUB_ENV
-          echo "dev_tag=$dev_version" >> $GITHUB_ENV
+    - name: Calculate new version
+      id: bump
+      run: |
+        branch=$(git rev-parse --abbrev-ref HEAD)
+        main_tag="${main_tag:-0.0.0}"
+        dev_tag="${dev_tag:-0.0.0}"
+        skip_commit=false
 
-      - name: New version
-        run: |
-          branch=$(git rev-parse --abbrev-ref HEAD)
-          main_tag="$main_tag"
-          dev_tag="$dev_tag"
-          new_version=""
-          skip_commit=false
+        IFS='.' read -r main_major main_minor main_patch <<< "$main_tag"
+        IFS='.' read -r dev_major dev_minor dev_patch <<< "$dev_tag"
 
-          git fetch origin main
-          git fetch origin dev
+        main_major=${main_major:-0}
+        main_minor=${main_minor:-0}
+        main_patch=${main_patch:-0}
 
-          IFS='.' read -r main_major main_minor main_patch <<< "$main_tag"
-          IFS='.' read -r dev_major dev_minor dev_patch <<< "$dev_tag"
+        dev_major=${dev_major:-0}
+        dev_minor=${dev_minor:-0}
+        dev_patch=${dev_patch:-0}
 
-          # Count changed files for patch/minor logic
-          changed_files=$(git diff --name-only origin/main...HEAD | wc -l)
-          echo "Changed files: $changed_files"
+        changed_files=$(git diff --name-only origin/main...HEAD | wc -l)
 
-          if [ "$branch" = "main" ]; then
-            # Check if main is behind dev
-            if git merge-base --is-ancestor origin/main origin/dev; then
-              echo "Main is behind Dev. Merging dev into main..."
-              git config --global user.name "$GIT_USER_NAME"
-              git config --global user.email "$GIT_USER_EMAIL"
-              git merge --no-ff origin/dev -m "Merge dev into main to sync version $dev_tag"
-              new_version="$dev_tag"
-              skip_commit=true
-            else
-              # Main = Dev or normal bump logic
-              if [ "$main_tag" = "$dev_tag" ]; then
-                if [ "$changed_files" -lt 4 ]; then
-                  patch=$((main_patch + 1))
-                  minor=$main_minor
-                else
-                  patch=0
-                  minor=$((main_minor + 1))
-                fi
-                new_version="$main_major.$minor.$patch"
-                echo "Main = Dev. Bumping both Main and Dev to $new_version"
-              elif [ "$main_major" -gt "$dev_major" ] || \
-                  { [ "$main_major" -eq "$dev_major" ] && [ "$main_minor" -gt "$dev_minor" ]; } || \
-                  { [ "$main_major" -eq "$dev_major" ] && [ "$main_minor" -eq "$dev_minor" ] && [ "$main_patch" -gt "$dev_patch" ]; }; then
-                new_version="$main_tag"
-                echo "Main > Dev. Updating Dev to match Main"
-              fi
-            fi
-          elif [ "$branch" = "dev" ]; then
-            # Always bump dev
-            if [ "$changed_files" -lt 4 ]; then
-              patch=$((dev_patch + 1))
-              minor=$dev_minor
-            else
-              patch=0
-              minor=$((dev_minor + 1))
-            fi
-            new_version="$dev_major.$minor.$patch"
-            echo "Bumping Dev version to $new_version"
+        if [ "$branch" = "main" ]; then
+          if git merge-base --is-ancestor origin/main origin/dev; then
+            # Main behind dev → merge dev
+            git config --global user.name "$GIT_USER_NAME"
+            git config --global user.email "$GIT_USER_EMAIL"
+            git merge --no-ff origin/dev -m "Merge dev into main to sync version $dev_tag"
+            new_version="$dev_tag"
+            skip_commit=true
           else
-            # Other branches: no automatic bump
-            new_version="$main_tag"
-            echo "Branch $branch: no automatic version bump"
-          fi
-
-          echo "new_version=$new_version" >> $GITHUB_ENV
-          echo "skip_commit=$skip_commit" >> $GITHUB_ENV
-          echo "Calculated new_version: $new_version"
-
-      - name: Update package.json
-        if: env.skip_commit != 'true'
-        run: |
-          find . -name "package.json" -not -path "*/node_modules/*" -not -path "*/vendor/*" -exec sh -c '
-            file="$1"
-            new_ver="${2#v}"
-            sed -i "s/\"version\": \".*\"/\"version\": \"$new_ver\"/" "$file"
-          ' _ {} "${{ env.new_version }}" \;
-
-      - name: Update package-lock.json
-        if: env.skip_commit != 'true'
-        run: |
-          find . -name "package-lock.json" -not -path "*/node_modules/*" -not -path "*/vendor/*" -exec sh -c '
-            file="$1"
-            new_ver="${2#v}"
-            sed -i "s/\"version\": \".*\"/\"version\": \"$new_ver\"/" "$file"
-          ' _ {} "${{ env.new_version }}" \;
-
-      - name: Commit changes
-        if: env.skip_commit != 'true'
-        run: |
-          git config --global user.name "$GIT_USER_NAME"
-          git config --global user.email "$GIT_USER_EMAIL"
-          git pull
-          git add $(find . -name "package.json" -o -name "package-lock.json" | grep -v node_modules | grep -v vendor)
-          git commit -m "v${{ env.new_version }}" || echo "No changes to commit"
-          git push origin $GITHUB_REF_NAME
-
-      - name: Update package.json
-        run: |
-          find . -name "package.json" -not -path "*/node_modules/*" -not -path "*/vendor/*" -exec sh -c '
-            file="$1"
-            new_ver="${2#v}"
-            if ! sed -n "3p" "$file" | grep -q "\"version\":"; then
-              echo "Version not at line 3 in $file"
-              exit 1
+            # Main = Dev or Main > Dev
+            if [ "$main_tag" = "$dev_tag" ]; then
+              if [ "$changed_files" -lt 4 ]; then
+                patch=$((main_patch + 1))
+                minor=$main_minor
+              else
+                patch=0
+                minor=$((main_minor + 1))
+              fi
+              new_version="$main_major.$minor.$patch"
+            else
+              # Main > Dev → bump dev to match main
+              new_version="$main_tag"
             fi
-            sed -i "3s/\"version\": \"[^\"]*\"/\"version\": \"$new_ver\"/" "$file"
-          ' _ {} "${new_version}" \;
-
-      - name: Update lock file
-        run: |
-          find . -name "package-lock.json" -not -path "*/node_modules/*" -not -path "*/vendor/*" -exec sh -c '
-            file="$1"
-            new_ver="${2#v}"
-            if ! sed -n "3p" "$file" | grep -q "\"version\":"; then
-              echo "Version not at line 3 in $file"
-              exit 1
-            fi
-            if ! sed -n "9p" "$file" | grep -q "\"version\":"; then
-              echo "Version not at line 9 in $file"
-              exit 1
-            fi
-            sed -i "3s/\"version\": \"[^\"]*\"/\"version\": \"$new_ver\"/" "$file"
-            sed -i "9s/\"version\": \"[^\"]*\"/\"version\": \"$new_ver\"/" "$file"
-          ' _ {} "${new_version}" \;
-
-      - name: Commit changes
-        if: env.skip_commit != 'true'
-        run: |
-          git config --global user.name "$GIT_USER_NAME"
-          git config --global user.email "$GIT_USER_EMAIL"
-          git add $(find . -name "package.json" -o -name "package-lock.json" | grep -v node_modules | grep -v vendor)
-          git commit -m "v${{ env.new_version }}" || echo "No changes to commit"
-          git push origin $GITHUB_REF_NAME
-
-      - name: Create Git Tag
-        run: |
-          echo "denne $GIT_USER_NAME, $GIT_USER_EMAIL, ${{ env.GIT_USER_NAME }}, ${{ env.GIT_USER_EMAIL }}"
-          git config --global user.name "$GIT_USER_NAME"
-          git config --global user.email "$GIT_USER_EMAIL"
-          branch=$(git rev-parse --abbrev-ref HEAD)
-          tag="${{ env.new_version }}"
-          if [ "$branch" = "dev" ]; then
-            tag="${{ env.new_version }}-dev"
           fi
-          git tag "$tag"
-          git push origin "$tag"
-
-      - name: Create dev tag if not exists
-        if: github.ref == 'refs/heads/main'
-        run: |
-          dev_tag="${{ env.new_version }}-dev"
-          if ! git tag -l | grep -q "^${dev_tag}$"; then
-            git tag $dev_tag
-            git push origin $dev_tag
+        elif [ "$branch" = "dev" ]; then
+          if [ "$changed_files" -lt 4 ]; then
+            patch=$((dev_patch + 1))
+            minor=$dev_minor
+          else
+            patch=0
+            minor=$((dev_minor + 1))
           fi
+          new_version="$dev_major.$minor.$patch"
+        else
+          new_version="$main_tag"
+        fi
+
+        echo "new_version=$new_version" >> $GITHUB_ENV
+        echo "skip_commit=$skip_commit" >> $GITHUB_ENV
+        echo "Calculated new_version: $new_version"
+        echo "::set-output name=new_tag::$new_version"
+
+    - name: Update package.json and lock
+      if: env.skip_commit != 'true'
+      run: |
+        for file in $(find . -name "package.json" -o -name "package-lock.json" \
+                     -not -path "*/node_modules/*" -not -path "*/vendor/*"); do
+          sed -i "s/\"version\": \".*\"/\"version\": \"${new_version}\"/" "$file"
+        done
+
+    - name: Commit changes
+      if: env.skip_commit != 'true'
+      run: |
+        git config --global user.name "$GIT_USER_NAME"
+        git config --global user.email "$GIT_USER_EMAIL"
+        git add $(find . -name "package.json" -o -name "package-lock.json" \
+                     -not -path "*/node_modules/*" -not -path "*/vendor/*")
+        git commit -m "v${new_version}" || echo "No changes to commit"
+        git push origin $GITHUB_REF_NAME
+
+    - name: Create Git Tags
+      id: set_tag
+      run: |
+        git config --global user.name "$GIT_USER_NAME"
+        git config --global user.email "$GIT_USER_EMAIL"
+        branch=$(git rev-parse --abbrev-ref HEAD)
+        main_tag="$new_version"
+
+        # Always tag main commit
+        git tag "$main_tag" || echo "Tag $main_tag already exists"
+        git push origin "$main_tag"
+
+        # If on main, ensure -dev tag exists
+        if [ "$branch" = "main" ]; then
+          dev_tag="${main_tag}-dev"
+          if ! git tag -l | grep -q "^$dev_tag$"; then
+            git tag "$dev_tag"
+            git push origin "$dev_tag"
+          fi
+        fi
+
+        # If on dev branch, tag dev commit
+        if [ "$branch" = "dev" ]; then
+          dev_tag="${new_version}-dev"
+          git tag "$dev_tag" || echo "Tag $dev_tag already exists"
+          git push origin "$dev_tag"
+        fi
+
+        echo "::set-output name=new_tag::$new_version"
 
   rebase:
     name: 🔄 Rebase from main to dev
