--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -160,6 +160,7 @@ jobs:
 
       - name: Rebase from main to dev
         run: |
+          git pull
           git rebase origin/main
 
       - name: Push dev
