--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -160,11 +160,11 @@ jobs:
 
       - name: Rebase from main to dev
         run: |
-          git pull
           git rebase origin/main
 
       - name: Push dev
-        run: git push origin dev
+        run: |
+          git push origin dev --rebase
 
   build:
     name: 🐳 Build Containers
