--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -244,7 +244,9 @@ jobs:
 
       - name: Validate UI routes & elements
         run: |
+          sudo apt-get update
           sudo apt-get install -y curl
+          echo "Curl path: $(which curl)"
           if nc -z localhost 3000; then
             echo "Port 3000 is open, proceeding with validation..."
             SPEC=$(cat .test.json)
