--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -250,10 +250,10 @@ jobs:
             SPEC=$(cat .test.json)
             for PATH in $(echo "$SPEC" | jq -r 'keys[]'); do
               echo "Checking $PATH ..."
-              HTML=$(curl -s "http://localhost:3000$PATH")
+              curl -s "http://localhost:3000$PATH" -o /tmp/page.html
               for ELEM in $(echo "$SPEC" | jq -r --arg path "$PATH" '.[$path][]'); do
                 echo "  Checking element $ELEM ..."
-                FOUND=$(echo "$HTML" | pup "[data-testid=\"$ELEM\"]" | wc -l)
+                FOUND=$(pup "[data-testid=\"$ELEM\"]" < /tmp/page.html | wc -l)
                 if [ "$FOUND" -eq 0 ]; then
                   echo "❌ Element $ELEM not found at $PATH"
                   exit 1
