--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -248,14 +248,14 @@ jobs:
           if nc -z localhost 3000; then
             echo "Port 3000 is open, proceeding with validation..."
             SPEC=$(cat .test.json)
-            for PATH in $(echo "$SPEC" | jq -r 'keys[]'); do
-              echo "Checking $PATH ..."
-              curl -s "http://localhost:3000$PATH" -o /tmp/page.html
-              for ELEM in $(echo "$SPEC" | jq -r --arg path "$PATH" '.[$path][]'); do
+            for ROUTE in $(echo "$SPEC" | jq -r 'keys[]'); do
+              echo "Checking $ROUTE ..."
+              curl -s "http://localhost:3000$ROUTE" -o /tmp/page.html
+              for ELEM in $(echo "$SPEC" | jq -r --arg path "$ROUTE" '.[$path][]'); do
                 echo "  Checking element $ELEM ..."
                 FOUND=$(pup "[data-testid=\"$ELEM\"]" < /tmp/page.html | wc -l)
                 if [ "$FOUND" -eq 0 ]; then
-                  echo "❌ Element $ELEM not found at $PATH"
+                  echo "❌ Element $ELEM not found at $ROUTE"
                   exit 1
                 fi
               done
