--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -304,7 +304,7 @@ jobs:
   update:
     name: 🔄 Update Kubernetes Repo
     runs-on: ubuntu-latest
-    needs: [build, fix-version]
+    # needs: [build, fix-version]
     steps:
       - name: Determine repo path
         id: set_repo
