--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -324,7 +324,8 @@ jobs:
 
       - name: Update image version
         run: |
-          cd ${env.repo_name}/cluster/${GITHUB_REPOSITORY##*/}
+          cd "${env.repo_name}/cluster/beehive"
+          # cd "${env.repo_name}/cluster/${GITHUB_REPOSITORY##*/}"
           yq e -i '.spec.template.spec.containers[0].image = "${{ secrets.DOCKER_REGISTRY }}/${GITHUB_REF##*/}:${{ needs.fix-version.outputs.new_tag }}"' deployment.yaml
           git config --global user.name "$GIT_USER_NAME"
           git config --global user.email "$GIT_USER_EMAIL"
