--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -319,7 +319,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: Login-Linjeforening-for-IT/${{ env.repo_name }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT }}
           path: ${{ env.repo_name }}
 
       - name: Update image version
